Fixed control of overlapping reservations

--- a/sportion/src/styles/form.css
+++ b/sportion/src/styles/form.css
@@ -9,6 +9,7 @@
     height: 60%;
     background-color: white;
     padding: 5%;
+    padding-top: 15%;
     /* border: rgb(255, 255, 255) solid 1px; */
 }
 .wrapper .form-wrapper {
