--- a/sportion/src/styles/style.css
+++ b/sportion/src/styles/style.css
@@ -10,8 +10,8 @@
 }
 
 body {
-  /* background-color: rgb(223, 239, 255); */
-  background-color: rgb(250, 250, 200);
+  background-color: rgb(223, 239, 255);
+  /* background-color: rgb(250, 250, 200); */
   width: 100%;
 }
 
@@ -117,7 +117,7 @@ img.i_item1{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 750%;
+  font-size: 1000%;
   color: rgb(255, 255, 255);
   font-style: italic;
   font-family: Calibri, 'Trebuchet MS', sans-serif;
